reponse: make null and not required

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
 li.reponse {list-style: lower-alpha;}
 .question {}
 .container{width: 50%;margin: 0 auto;}
+input[type=radio][value=""], input[type=radio][value=""] ~ label {
+    display:none;
+}
