relation question > choisir_reponse

--- a/templates/qcm/index.html.twig
+++ b/templates/qcm/index.html.twig
@@ -8,6 +8,9 @@
     {{ form_start(form) }} 
     	<p class="question font-weight-bold">{{ question.libele }}</p>
     	{{ form_widget(form.reponse)}}
+    	<div class="hidden">
+    		{{form_widget(form.question)}}
+    	</div>
     	<button class="btn btn-primary float-right">Next</button>
     {{ form_end(form) }}
 </div>
