--- a/templates/qcm/final.html.twig
+++ b/templates/qcm/final.html.twig
@@ -11,6 +11,9 @@
 	    			</span> 
     				question{% if condition %}s{% endif %} 
 	    			vrai{% if condition %}s{% endif %}    				
+	    		</p>
+	    		<p class="text-center m-auto">
+	    			<a href="#" class="btn btn-primary btn-sm">Plus de detail</a>
 	    		</p>    			
     		</div>
     	</div>
