--- a/templates/qcm/detail.html.twig
+++ b/templates/qcm/detail.html.twig
@@ -31,7 +31,7 @@
 	    			{% endfor %}
 	    		</ul>
 	    		<p class="text-center m-auto">
-	    			<a href="#" class="btn btn-primary btn-sm">Réjouer</a>
+	    			<a href="{{ path('qcm_replay')}}" class="btn btn-primary btn-sm">Réjouer</a>
 	    		</p>    			
     		</div>
     	</div>
