--- a/templates/qcm/final.html.twig
+++ b/templates/qcm/final.html.twig
@@ -13,7 +13,7 @@
 	    			vrai{% if condition %}s{% endif %}    				
 	    		</p>
 	    		<p class="text-center m-auto">
-	    			<a href="#" class="btn btn-primary btn-sm">Plus de detail</a>
+	    			<a href="{{ path('qcm_resultdetail')}}" class="btn btn-primary btn-sm">Plus de detail</a>
 	    		</p>    			
     		</div>
     	</div>
