--- a/templates/qcm/final.html.twig
+++ b/templates/qcm/final.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %}QCM | Fin {% endblock %}
 {% block body %}
 	{% set condition =  results_true > 1 %}
     <div class="container">
