--- a/templates/qcm/question.html.twig
+++ b/templates/qcm/question.html.twig
@@ -6,6 +6,8 @@
 <div class="container">
     <div class="row">
     	<div class="col-md-12 mt-5">
+            <div id="_question_countdown" class="row justify-content-center border rounded-pill p-1 rounded">
+            </div>
     		<h1 class="text-center">QCM</h1> 
     		{{ form_start(form) }} 
     			<p class="question font-weight-bold">{{ question.libele }}</p>
